--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "dev:network": "next dev -H 0.0.0.0",
     "build": "next build",
+    "build:export": "NEXT_OUTPUT=export next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "deploy": "npm run build && firebase deploy --only hosting",
+    "deploy": "NEXT_PUBLIC_API_URL=https://kanny-kanban-backend.onrender.com/api npm run build:export && firebase deploy --only hosting",
     "firebase:login": "firebase login",
     "firebase:init": "firebase init hosting"
   },
@@ -19,10 +20,9 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@react-oauth/google": "^0.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "firebase": "^12.5.0",
+    
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
