--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^12.5.0",
     
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.424.0",
